@@ -5,6 +5,7 @@
 - Python MosquittoMessage payload parameter is now a Python string, not a
   ctypes object which makes it much easier to use.
 - C++ library is now in its own namespace, mosquittopp.
+- Add support for adding log message timestamps in the broker.
 - Fix missing mosquitto_username_pw_set() python binding.
 - Fix keepalive timeout for reconnecting non clean-session clients. Prevents
   immediate disconnection on reconnection.
